Fix timeline vertical alignment

--- a/src/assets/base.sass
+++ b/src/assets/base.sass
@@ -109,7 +109,9 @@ body
             border-radius: 999999px
             z-index: 1
             border: 0.065cm solid black
-            top: 0.44rem
+            top: 0
+            bottom: 0
+            margin: auto 0
             left: -1.42rem
             $pointSpace: 0.35rem
             box-shadow: 0 $pointSpace 0 whitesmoke, 0 calc(#{$pointSpace} * -1) 0 whitesmoke
